--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "paths": {
       "@common": ["./src/common"],
       "@svg": ["./src/assets/svg"],
+      "@fetch": ["./src/services/fetch.ts"],
+      "@dtos": ["./src/dtos"],
+      "@utils": ["./src/utils"],
     }
   }
 }
