--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "dev": "npx expo start",
     "server": "json-server ./src/services/server.json --host 192.168.15.187 --port 3333 --delay 1000"
   },
   "dependencies": {
@@ -22,8 +23,9 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.9.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
